# ImageConverter

./: .gitignore  CMakeLists.txt  ImageConvertInstaller.nsi  LICENSE  README.md
include/: converter_utils.h
resources/: icon.rc  resource.h
src/: converter.cpp
